logs/train_3860546.out
Traceback (most recent call last):
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/main.py", line 31, in <module>
    from model.init_model import build_model
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/model/init_model.py", line 22, in <module>
    from model.vit import VehicleViT
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/model/vit.py", line 34, in <module>
    from model.transformer import Transformer
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/model/transformer.py", line 20, in <module>
    from model.block import EncoderBlock
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/model/block.py", line 38, in <module>
    from model.attention import MultiHeadSelfAttention
  File "/home/fvolvert/INFO8010-DeepLearning-Nvidia-Project/reid/model/attention.py", line 73
    """
       ^
IndentationError: unindent does not match any outer indentation level
